--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -14,17 +14,26 @@ dependencies:
   cupertino_icons: ^1.0.6
   collection: ^1.18.0
   dio: ^5.4.1
+
   onlife_map_view:
     git:
       url: https://github.com/onlifeltd/onlife-flutter-mobile.git
       ref: onlife_map_view
       path: package/onlife_map_view
 
+#  onlife_map_view:
+#    path: ../../onlife-flutter-mobile/package/onlife_map_view
+  riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
+  equatable: ^2.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.10
 
 flutter:
 
